# PythonProjectGenerator

./: README.md  cookiecutter.json  pyproject.toml
hooks/: pre_gen_project.py
{{cookiecutter.package_name}}/: LICENSE  README.md  pyproject.toml
{{cookiecutter.package_name}}/.github/: issue_template.md
{{cookiecutter.package_name}}/.github/workflows/: docs.yml  test.yml
{{cookiecutter.package_name}}/docs/: gen_ref_pages.py  mkdocs.yml
{{cookiecutter.package_name}}/tests/: test_hello.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: hello.py
{{cookiecutter.package_name}}/{{cookiecutter.package_slug}}/: settings.py
