[tool.poetry]
name = "pythonprojectgenerator"
version = "0.1.0"
description = "A python package generator"
authors = ["Raphael Mammeri <raphael.mammeri@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
